Only match real MIME types, not e.g. "raw CD image"

Summary:
BUG: 364884

Only match real MIME types when doing string matching to prevent pulling in unrelated files whose types match the string.

This prevents weird situations such as ISO files (which show up as "raw CD image") appearing in image searches.

Test Plan:
- Confirmed at www.mime-type.net/ that all audio, video, and image MIME types have the key word before the slash (e.g. "image/")
- Booted a clean KDE Neon VM and added an ISO and a bunch of pictures of various types
- Confirmed the problem: `baloosearch -t image iso` shows ISO files
- Patched and rebuilt Baloo
- Forced a re-index operation (balooctl disable; rm ~/.local/share/baloo/index*; balooctl enable)
- Did a new image search (`baloosearch -t image iso`) and confirmed that the ISO does not show up
- Confirmed that other images still show up

Reviewers: #frameworks, nicolasfella, dfaure, kossebau, vhanda

Reviewed By: dfaure

Subscribers: #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D7948